--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@types/node": "20.1.0",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
@@ -17,12 +18,17 @@
     "eslint-config-next": "13.4.1",
     "framer-motion": "^10.12.8",
     "next": "13.4.1",
+    "next-sanity": "^4.3.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-simple-typewriter": "^5.0.1",
     "react-social-icons": "^5.15.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "tailwind-scrollbar": "^3.0.1"
   }
 }
